--- a/Frontend/templates/frontend.html
+++ b/Frontend/templates/frontend.html
@@ -4,16 +4,21 @@
         <meta charset = "UTF-8">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
         <title>Student Registration</title>
+        <link rel = "stylesheet" href= "../static/css/frontend.css">
     </head>
     <body>
         <h1>Student Registration Form</h1>
         <form action = "/add_student" method = "post">
 
-            <label for = "FirstName">First Name</label> 
-            <input type = "text" id = "FirstName" name = "FirstName" required>
-
-            <label for = "LastName">Last Name</label>
-            <input type = "text" id = "LastName" name = "LastName" required>
+            <div class="form-group">
+                <label for="FirstName">First Name</label>
+                <input type="text" id="FirstName" name="FirstName" required>
+            </div>
+            
+            <div class="form-group">
+                <label for="LastName">Last Name</label>
+                <input type="text" id="LastName" name="LastName" required>
+            </div>
 
             <button type = "submit">Add Student</button>
         </form>
