--- a/Frontend/templates/students.html
+++ b/Frontend/templates/students.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List of Students Grouped by Week</title>
-</head>
-<body>
-    <h1>List of Students Grouped by Week</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>List of Students Grouped by Week</title>
+        <link rel = "stylesheet" href= "../static/css/students.css">
+    </head>
+    <body>
+        <h1>List of Students Grouped by Week</h1>
 
-    {% for week, students_in_week in students_by_week.items() %}
-        <h2>Week {{ week }}</h2>
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>Student Number</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Enrollment Date</th>
-                    <th>Day of the Week</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for student in students_in_week %}
+        {% for week, students_in_week in students_by_week.items() %}
+            <h2>Week {{ week }}</h2>
+            <table border="1">
+                <thead>
                     <tr>
-                        <td>{{ student["StudentNumber"] }}</td>
-                        <td>{{ student["FirstName"] }}</td>
-                        <td>{{ student["LastName"] }}</td>
-                        <td>{{ student["EnrollmentDate"] }}</td>
-                        <td>{{ student["DayOfWeek"] }}</td>
+                        <th>Student Number</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Enrollment Date</th>
+                        <th>Day of the Week</th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <br>
-    {% endfor %}
-
-</body>
+                </thead>
+                <tbody>
+                    {% for student in students_in_week %}
+                        <tr class="{{ student['DayOfWeek']|lower }}">
+                            <td>{{ student["StudentNumber"] }}</td>
+                            <td>{{ student["FirstName"] }}</td>
+                            <td>{{ student["LastName"] }}</td>
+                            <td>{{ student["EnrollmentDate"] }}</td>
+                            <td>{{ student["DayOfWeek"] }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <br>
+        {% endfor %}
+    </body>
 </html>
