--- a/Frontend/static/css/students.css
+++ b/Frontend/static/css/students.css
@@ -26,3 +26,15 @@
 .sunday {
     background-color: lightgoldenrodyellow;
 }
+
+/* Link styling */
+a {
+    display: block;
+    margin-top: 10px;
+    color: #007BFF;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
