--- a/Frontend/templates/students.html
+++ b/Frontend/templates/students.html
@@ -19,6 +19,7 @@
                         <th>Last Name</th>
                         <th>Enrollment Date</th>
                         <th>Day of the Week</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -29,6 +30,11 @@
                             <td>{{ student["LastName"] }}</td>
                             <td>{{ student["EnrollmentDate"] }}</td>
                             <td>{{ student["DayOfWeek"] }}</td>
+                            <td>
+                                <a href="{{ url_for('delete_student', first_name = student["FirstName"], last_name = student["LastName"]) }}">
+                                    <button>Delete</button>
+                                </a>
+                            </td>
                         </tr>
                     {% endfor %}
                 </tbody>
