--- a/Frontend/templates/students.html
+++ b/Frontend/templates/students.html
@@ -32,7 +32,7 @@
                             <td>{{ student["DayOfWeek"] }}</td>
                             <td>
                                 <a href="{{ url_for('delete_student', first_name = student["FirstName"], last_name = student["LastName"]) }}">
-                                    <button>Delete</button>
+                                    <button>&#x274C;</button>
                                 </a>
                             </td>
                         </tr>
