--- a/Frontend/templates/students.html
+++ b/Frontend/templates/students.html
@@ -31,7 +31,9 @@
                             <td>{{ student["EnrollmentDate"] }}</td>
                             <td>{{ student["DayOfWeek"] }}</td>
                             <td>
-                                <a href="{{ url_for('delete_student', first_name = student["FirstName"], last_name = student["LastName"]) }}">
+                                <a href="{{ url_for('delete_student', 
+                                first_name = student["FirstName"], 
+                                last_name = student["LastName"]) }}">
                                     <button>&#x274C;</button>
                                 </a>
                             </td>
